# pod_reflection

./: CMakeLists.txt  LICENSE  README.md
example/: main.cpp
include/: pod_reflection.hpp
include/pod_reflection/: pod_reflection.h
tests/: test.cpp
